12. Validate command line arguments [#246865]